Add background on BPNN

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -268,3 +268,49 @@ pages ={24-25}
   year={1948},
   publisher={Nokia Bell Labs}
 }
+
+@book{rosenblatt1957perceptron,
+  title={The perceptron, a perceiving and recognizing automaton:(Project Para)},
+  author={Rosenblatt, Frank},
+  year={1957},
+  publisher={Cornell Aeronautical Laboratory}
+}
+
+@article{lemarechal2012cauchy,
+  title={Cauchy and the gradient method},
+  author={Lemar{\'e}chal, Claude},
+  journal={Doc Math Extra},
+  volume={251},
+  number={254},
+  pages={10},
+  year={2012}
+}
+
+@inproceedings{ranganath2013adaptive,
+  title={An adaptive learning rate for stochastic variational inference},
+  author={Ranganath, Rajesh and Wang, Chong and David, Blei and Xing, Eric},
+  booktitle={International conference on machine learning},
+  pages={298--306},
+  year={2013},
+  organization={PMLR}
+}
+
+@article{amari1993backpropagation,
+  title={Backpropagation and stochastic gradient descent method},
+  author={Amari, Shun-ichi},
+  journal={Neurocomputing},
+  volume={5},
+  number={4-5},
+  pages={185--196},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@inproceedings{steinkraus2005using,
+  title={Using GPUs for machine learning algorithms},
+  author={Steinkraus, Dave and Buck, Ian and Simard, Patrice Y},
+  booktitle={Eighth International Conference on Document Analysis and Recognition (ICDAR'05)},
+  pages={1115--1120},
+  year={2005},
+  organization={IEEE}
+}
