--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,7 @@
 \usepackage{booktabs}
 \usepackage{multicol}
 \usepackage{multirow}
+\usepackage{amsmath}
 
 \usepackage[]{scrlayer-scrpage}
 \usepackage{hyperref}
