--- a/bibliography.bib
+++ b/bibliography.bib
@@ -314,3 +314,61 @@ pages ={24-25}
   year={2005},
   organization={IEEE}
 }
+
+@techreport{jordan1986serial,
+  title={Serial order: a parallel distributed processing approach. technical report, june 1985-march 1986},
+  author={Jordan, MI},
+  year={1986},
+  institution={California Univ., San Diego, La Jolla (USA). Inst. for Cognitive Science}
+}
+
+@article{espinosa2025importance,
+  title={The Importance of Cajal’s and Lorente de N{\'o}’s Neuroscience to the Birth of Cybernetics},
+  author={Espinosa-Sanchez, Juan Manuel and Gomez-Marin, Alex and de Castro, Fernando},
+  journal={The Neuroscientist},
+  volume={31},
+  number={1},
+  pages={14--30},
+  year={2025},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{mcculloch1943logical,
+  title={A logical calculus of the ideas immanent in nervous activity},
+  author={McCulloch, Warren S and Pitts, Walter},
+  journal={The bulletin of mathematical biophysics},
+  volume={5},
+  number={4},
+  pages={115--133},
+  year={1943},
+  publisher={Springer}
+}
+
+@article{elman1990finding,
+  title={Finding structure in time},
+  author={Elman, Jeffrey L},
+  journal={Cognitive science},
+  volume={14},
+  number={2},
+  pages={179--211},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{tarwani2017survey,
+  title={Survey on recurrent neural network in natural language processing},
+  author={Tarwani, Kanchan M and Edem, Swathi},
+  journal={Int. J. Eng. Trends Technol},
+  volume={48},
+  number={6},
+  pages={301--304},
+  year={2017}
+}
+
+@article{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
