Finish background chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -37,6 +37,7 @@
 \usepackage[]{scrlayer-scrpage}
 \usepackage{hyperref}
 
+% \usepackage[autostyle,english=american,german=quotes]{csquotes}
 \usepackage[linesnumbered,ruled]{algorithm2e} % this is to write algorithms, if you do not like it, the other options are algorithmic, or pseudocode
 
 % better bibliography (biblatex style)
