--- a/bibliography.bib
+++ b/bibliography.bib
@@ -372,3 +372,132 @@ pages ={24-25}
   volume={30},
   year={2017}
 }
+
+@article{yadav2022survey,
+  title={Survey on machine learning in speech emotion recognition and vision systems using a recurrent neural network (RNN)},
+  author={Yadav, Satya Prakash and Zaidi, Subiya and Mishra, Annu and Yadav, Vibhash},
+  journal={Archives of Computational Methods in Engineering},
+  volume={29},
+  number={3},
+  pages={1753--1770},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{hochreiter1998vanishing,
+  title={The vanishing gradient problem during learning recurrent neural nets and problem solutions},
+  author={Hochreiter, Sepp},
+  journal={International Journal of Uncertainty, Fuzziness and Knowledge-Based Systems},
+  volume={6},
+  number={02},
+  pages={107--116},
+  year={1998},
+  publisher={World Scientific}
+}
+
+@inproceedings{bengio1993problem,
+  title={The problem of learning long-term dependencies in recurrent networks},
+  author={Bengio, Yoshua and Frasconi, Paolo and Simard, Patrice},
+  booktitle={IEEE international conference on neural networks},
+  pages={1183--1188},
+  year={1993},
+  organization={IEEE}
+}
+
+@inproceedings{ludwig2019comparison,
+  title={Comparison of time series approaches applied to greenhouse gas analysis: ANFIS, RNN, and LSTM},
+  author={Ludwig, Simone A},
+  booktitle={2019 IEEE International Conference on Fuzzy Systems (FUZZ-IEEE)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{raza2021cloud,
+  title={Cloud sentiment accuracy comparison using RNN, LSTM and GRU},
+  author={Raza, Muhammad Raheel and Hussain, Walayat and Merig{\'o}, Jos{\'e} Maria},
+  booktitle={2021 Innovations in intelligent systems and applications conference (ASYU)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{hu2021handling,
+  title={Handling vanishing gradient problem using artificial derivative},
+  author={Hu, Zheng and Zhang, Jiaojiao and Ge, Yun},
+  journal={IEEE Access},
+  volume={9},
+  pages={22371--22377},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{rahman2019nonintrusive,
+  title={Nonintrusive reduced order modeling framework for quasigeostrophic turbulence},
+  author={Rahman, Sk M and Pawar, Suraj and San, Omer and Rasheed, Adil and Iliescu, Traian},
+  journal={Physical Review E},
+  volume={100},
+  number={5},
+  pages={053306},
+  year={2019},
+  publisher={APS}
+}
+
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT press}
+}
+
+@inproceedings{zhang2017deep,
+  title={Deep learning on symbolic representations for large-scale heterogeneous time-series event prediction},
+  author={Zhang, Shengdong and Bahrampour, Soheil and Ramakrishnan, Naveen and Schott, Lukas and Shah, Mohak},
+  booktitle={2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={5970--5974},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{das2018desh,
+  title={Desh: deep learning for system health prediction of lead times to failure in hpc},
+  author={Das, Anwesha and Mueller, Frank and Siegel, Charles and Vishnu, Abhinav},
+  booktitle={Proceedings of the 27th international symposium on high-performance parallel and distributed computing},
+  pages={40--51},
+  year={2018}
+}
+
+@article{cortes1995support,
+  author = {Cortes, Corinna and Vapnik, Vladimir},
+  journal = {Machine Learning},
+  title = {Support-Vector Networks},
+  volume = {20},
+  year = {1995}
+}
+
+@inproceedings{sun2019system,
+  title={System-level hardware failure prediction using deep learning},
+  author={Sun, Xiaoyi and Chakrabarty, Krishnendu and Huang, Ruirui and Chen, Yiquan and Zhao, Bing and Cao, Hai and Han, Yinhe and Liang, Xiaoyao and Jiang, Li},
+  booktitle={Proceedings of the 56th Annual Design Automation Conference 2019},
+  pages={1--6},
+  year={2019}
+}
+
+@article{o2015introduction,
+  title={An introduction to convolutional neural networks},
+  author={O'shea, Keiron and Nash, Ryan},
+  journal={arXiv preprint arXiv:1511.08458},
+  year={2015}
+}
+
+@inproceedings{kayhan2020translation,
+  title={On translation invariance in cnns: Convolutional layers can exploit absolute spatial location},
+  author={Kayhan, Osman Semih and Gemert, Jan C van},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={14274--14285},
+  year={2020}
+}
