--- a/thesis.tex
+++ b/thesis.tex
@@ -57,6 +57,39 @@
 
 % YOUR PACKAGES
 
+\DeclareMathOperator*{\argmax}{argmax}
+\DeclareMathOperator*{\argmin}{argmin}
+
+\usepackage{listings}
+\usepackage{xparse}
+\usepackage{xcolor}
+\usepackage{caption,subcaption}
+
+\lstset{
+    tabsize = 2,
+    frame = tb,
+    breaklines = true,
+    numbers = left,
+    numbersep = 5pt,
+    numberstyle = \color{white!30!black}\scriptsize,
+    stepnumber = 1,
+    basicstyle = \footnotesize\ttfamily,
+    commentstyle={\color{green!50!black}\ttfamily},
+    keywordstyle = {\bfseries\color{purple}}, % keywords
+    keywordstyle = [2]{\itshape\color{blue}}, % traits
+    keywordstyle = [3]{\color{blue}}, % primitive types
+    keywordstyle = [4]{\color{blue}}, % type and value ctors
+    keywordstyle = [5]{\color{purple!50!blue}}, % macros
+    stringstyle = \color{green!45!blue},
+    aboveskip = \baselineskip,
+    showstringspaces = false
+}
+
+\lstdefinelanguage{Toml}{
+    comment = [l]{\#},
+    keywords = {true, false},
+    morestring = [b]{"}
+}
 
 % Title
 \title{Health Status for Hard Drive Failure Detection}
@@ -122,10 +155,10 @@
 \include{chapters/conclusion}
 
 % -- Appendix (optional)
-% \begin{appendices}
-%     \input{appendix.tex}
-% \end{appendices}
-% \newpage
+\begin{appendices}
+    \input{appendix.tex}
+\end{appendices}
+\newpage
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
