--- a/appendix.tex
+++ b/appendix.tex
@@ -1,7 +1,232 @@
 % !TeX spellcheck = en_US
 % !TeX encoding = UTF-8
-\chapter{Code}
+\chapter{Configuration Files}\label{chap:config_files}
 
-\chapter{Math}
+Below we have the standard configurations for each of the models we trained.
+When mentioning the results, if the value of a parameter is not mentioned, then it is because the value indicated below is used.
 
-\chapter{Dataset}
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Binary BPNN}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 0.6
+
+[model]
+model_type = "NN"
+model = "BinaryBPNN"
+health_status_count = 2
+hidden_nodes = 30
+epoch_count = 1500
+learning_rate = 0.1
+evaluate_interval = 1500
+lr_decay_interval = 100000
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\newpage
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Binary RNN}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 20.0
+
+[model]
+model_type = "NN"
+model = "BinaryRNN"
+health_status_count = 2
+hidden_nodes = 10
+epoch_count = 700
+learning_rate = 0.1
+evaluate_interval = 700
+lr_decay_interval = 100
+lookback = 6
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Binary LSTM}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 15.0
+
+[model]
+model_type = "NN"
+model = "BinaryLSTM"
+health_status_count = 2
+hidden_nodes = 10
+epoch_count = 700
+learning_rate = 0.1
+evaluate_interval = 700
+lr_decay_interval = 100
+lookback = 6
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multi-Level BPNN}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 0.6
+
+[model]
+model_type = "NN"
+model = "MultiLevelBPNN"
+health_status_count = 4
+hidden_nodes = 30
+epoch_count = 1500
+learning_rate = 0.1
+evaluate_interval = 1500
+lr_decay_interval = 100000
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multi-Level RNN}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 20.0
+
+[model]
+model_type = "NN"
+model = "MultiLevelRNN"
+health_status_count = 4
+hidden_nodes = 10
+epoch_count = 700
+learning_rate = 0.1
+evaluate_interval = 700
+lr_decay_interval = 100
+lookback = 6
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multi-Level LSTM}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 10.0
+
+[model]
+model_type = "NN"
+model = "MultiLevelLSTM"
+health_status_count = 4
+hidden_nodes = 10
+epoch_count = 700
+learning_rate = 0.1
+evaluate_interval = 700
+lr_decay_interval = 100
+lookback = 6
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Classification Tree}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "discrete"
+good_bad_ratio = 0.6
+
+[model]
+model_type = "TREE"
+tree_type = "CLASSIFICATION"
+health_status_count = 2
+criterion = "GINI"
+max_depth = 5
+min_samples_leaf = 5
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
+
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Regression Tree}]
+[dataset]
+seed = 0
+data_file = "data/baidu-dataset.csv"
+number_of_failing_samples = 12
+
+[preprocessing]
+change_rate_interval = 1
+feature_count = 19
+feature_selection_algorithm = "z_score"
+health_status_algorithm = "continuous"
+good_bad_ratio = 1.0
+
+[model]
+model_type = "TREE"
+tree_type = "REGRESSION"
+health_status_count = 2
+criterion = "SQUARED_ERROR"
+max_depth = 5
+min_samples_leaf = 5
+
+[vote]
+vote_count = 1
+vote_threshold = 0.5
+\end{lstlisting}
