First complete version of the thesis

--- a/appendix.tex
+++ b/appendix.tex
@@ -93,7 +93,7 @@ vote_count = 1
 vote_threshold = 0.5
 \end{lstlisting}
 
-\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multi-Level BPNN}]
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multiclass-Level BPNN}]
 [dataset]
 seed = 0
 data_file = "data/baidu-dataset.csv"
@@ -121,7 +121,7 @@ vote_count = 1
 vote_threshold = 0.5
 \end{lstlisting}
 
-\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multi-Level RNN}]
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multiclass RNN}]
 [dataset]
 seed = 0
 data_file = "data/baidu-dataset.csv"
@@ -150,7 +150,7 @@ vote_count = 1
 vote_threshold = 0.5
 \end{lstlisting}
 
-\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multi-Level LSTM}]
+\begin{lstlisting}[language=Toml,caption={Default configuration file for a Multiclass LSTM}]
 [dataset]
 seed = 0
 data_file = "data/baidu-dataset.csv"
