--- a/thesis.tex
+++ b/thesis.tex
@@ -151,7 +151,7 @@
 \include{chapters/background}
 \include{chapters/methods}
 \include{chapters/results}
-\include{chapters/discussion}
+% \include{chapters/discussion}
 \include{chapters/conclusion}
 
 % -- Appendix (optional)
