--- a/bibliography.bib
+++ b/bibliography.bib
@@ -501,3 +501,29 @@ pages ={24-25}
   pages={14274--14285},
   year={2020}
 }
+
+@article{kumar2014feature,
+  title={Feature selection},
+  author={Kumar, Vipin and Minz, Sonajharia},
+  journal={SmartCR},
+  volume={4},
+  number={3},
+  pages={211--229},
+  year={2014}
+}
+
+@book{bendat2011random,
+  title={Random data: analysis and measurement procedures},
+  author={Bendat, Julius S and Piersol, Allan G},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+
+@incollection{macfarland2016mann,
+  title={Mann--whitney u test},
+  author={MacFarland, Thomas W and Yates, Jan M},
+  booktitle={Introduction to nonparametric statistics for the biological sciences using R},
+  pages={103--132},
+  year={2016},
+  publisher={Springer}
+}
