--- a/bibliography.bib
+++ b/bibliography.bib
@@ -527,3 +527,24 @@ pages ={24-25}
   year={2016},
   publisher={Springer}
 }
+
+@article{paola1995review,
+  title={A review and analysis of backpropagation neural networks for classification of remotely-sensed multi-spectral imagery},
+  author={Paola, Justin D and Schowengerdt, Robert A},
+  journal={International Journal of remote sensing},
+  volume={16},
+  number={16},
+  pages={3033--3058},
+  year={1995},
+  publisher={Taylor \& Francis}
+}
+
+@article{suresh2015particle,
+  title={Particle swarm optimization over back propagation neural network for length of stay prediction},
+  author={Suresh, Abhijit and Harish, KV and Radhika, N},
+  journal={Procedia computer science},
+  volume={46},
+  pages={268--275},
+  year={2015},
+  publisher={Elsevier}
+}
