Improve state of the art

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -548,3 +548,35 @@ pages ={24-25}
   year={2015},
   publisher={Elsevier}
 }
+
+@Inbook{Bramer2020,
+author="Bramer, Max",
+title="Avoiding Overfitting of Decision Trees",
+bookTitle="Principles of Data Mining",
+year="2020",
+publisher="Springer London",
+address="London",
+pages="121--136",
+abstract="This chapter begins by examining techniques for dealing with clashes (i.e. inconsistent instances) in a training set. This leads to a discussion of methods for avoiding or reducing overfitting of a decision tree to training data. Overfitting arises when a decision tree is excessively dependent on irrelevant features of the training data with the result that its predictive power for unseen instances is reduced.",
+isbn="978-1-4471-7493-6",
+doi="10.1007/978-1-4471-7493-6_9",
+url="https://doi.org/10.1007/978-1-4471-7493-6_9"
+}
+
+@inproceedings{yang2015hard,
+  title={Hard drive failure prediction using big data},
+  author={Yang, Wenjun and Hu, Dianming and Liu, Yuliang and Wang, Shuhao and Jiang, Tianming},
+  booktitle={2015 IEEE 34th Symposium on Reliable Distributed Systems Workshop (SRDSW)},
+  pages={13--18},
+  year={2015},
+  organization={IEEE}
+}
+
+@incollection{fensel2020introduction,
+  title={Introduction: what is a knowledge graph?},
+  author={Fensel, Dieter and {\c{S}}im{\c{s}}ek, Umutcan and Angele, Kevin and Huaman, Elwin and K{\"a}rle, Elias and Panasiuk, Oleksandra and Toma, Ioan and Umbrich, J{\"u}rgen and Wahler, Alexander},
+  booktitle={Knowledge graphs: Methodology, tools and selected use cases},
+  pages={1--10},
+  year={2020},
+  publisher={Springer}
+}
