--- a/appendix.tex
+++ b/appendix.tex
@@ -3,7 +3,7 @@
 \chapter{Configuration Files}\label{chap:config_files}
 
 Below we have the standard configurations for each of the models we trained.
-When mentioning the results, if the value of a parameter is not mentioned, then it is because the value indicated below is used.
+When mentioning the results, if the value of a hyperparameter is not mentioned, then it is because the value indicated below is used.
 
 \begin{lstlisting}[language=Toml,caption={Default configuration file for a Binary BPNN}]
 [dataset]
