--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -2,19 +2,21 @@
 % !TeX encoding = UTF-8
 \chapter*{Abstract}
 
-Recently, users require an increasingly amount of storage in order to allow the multitude of online service available today.
-As the number and size of data centers increases, so does the need of automated tools for its maintenance.
-In particular, in order to prevent data loss and to ensure the continuity of the service hardware failures need to be predicted.
+Users require an increasingly amount of storage in order to allow the multitude of online service available nowadays.
+As the number and size of data centers increases, so does the need of automated tools for their maintenance.
+In particular, in order to prevent data loss and to ensure the reliability of the service hardware failures need to be predicted.
 
 Most of the hardware failures in such systems occur on the hard drive.
 As a consequence, vendors introduced a set of values that allow these disks to be monitored: the SMART attributes.
-Many machine learning based approaches have been proposed to handle this problem of hard drive failure problem.
+Many machine learning based approaches have been proposed to detect problems with the disks before they fail and the data on them becomes unrecoverable.
 
-In the current work, we present some of the state of the art methods to tackle the problem at hand.
-We also implement five of these models presented in other works in order to objectively compare their performance on the same set under the same preprocessing steps.
+In the current work, we present some of the state of the art methods to tackle the problem of hard drive failure prediction.
 
-Finally, we leverage the fact that the sequence of SMART attributes for a disk form a time series in order to improve existing methods.
-We use the concept of Health Status in which the gradual deterioration of a hard drive is taken account and, consequently, the samples in the training set can be classified in multiple classes, not only ``Healthy'' or ``Failing''.
-In order to take further advantage of the time series aspect we implement, to the best of our knowledge, the first Long Short-Term Memory model to tackle the Hard Drive Failure Prediction Problem using its SMART attributes.
+Additionally, we leverage the fact that the sequence of SMART attributes samples of a disk form a time series in order to improve existing methods.
+We use the concept of health status in which the gradual deterioration of a hard drive is taken account and, consequently, the samples in the training set can be classified in multiple classes, not only ``Healthy'' or ``Failing''.
+
+In order to take further advantage of the time series aspect we implement, to the best of our knowledge, the first Long Short-Term Memory model to tackle the hard drive failure prediction problem using its SMART attributes.
+Also four other state of the art models are implemented and extended to deal with the health status version of the problem.
+
 
 \textbf{Keywords:} Hard drive failure prediction, SMART, health status, neural networks, recurrent neural networks, long short-term memory 
