--- a/thesis.tex
+++ b/thesis.tex
@@ -155,10 +155,10 @@
 \include{chapters/conclusion}
 
 % -- Appendix (optional)
-\begin{appendices}
-    \input{appendix.tex}
-\end{appendices}
-\newpage
+% \begin{appendices}
+%     \input{appendix.tex}
+% \end{appendices}
+% \newpage
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
