--- a/bibliography.bib
+++ b/bibliography.bib
@@ -580,3 +580,21 @@ url="https://doi.org/10.1007/978-1-4471-7493-6_9"
   year={2020},
   publisher={Springer}
 }
+
+@article{buckland1994relationship,
+  title={The relationship between recall and precision},
+  author={Buckland, Michael and Gey, Fredric},
+  journal={Journal of the American society for information science},
+  volume={45},
+  number={1},
+  pages={12--19},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@book{olson2008advanced,
+  title={Advanced data mining techniques},
+  author={Olson, David L and Delen, Dursun},
+  year={2008},
+  publisher={Springer Science \& Business Media}
+}
